@@ -1626,7 +1626,13 @@ if (isset($_GET['info']) or isset($_POST['info'])) {
 <td style="font-weight: bold; text-align: center; width: 60%">Emplacement</td>
 </tr>
 <?php
+// 20201117
 $nb_doc_choisi='3';
+// INSERT INTO setting SET name='cdt_nb_doc_joints', value='10';
+//saveSetting('cdt_nb_doc_joints', 10);
+if(preg_match('/[0-9]{1,}/', getSettingValue('cdt_nb_doc_joints'))) {
+	$nb_doc_choisi=getSettingValue('cdt_nb_doc_joints');
+}
 $nb_doc_choisi_compte='0';
 while($nb_doc_choisi_compte<$nb_doc_choisi) { ?>
     <tr style="border-style:solid; border-width:1px; border-color: <?php echo $couleur_bord_tableau_notice; ?>; background-color: <?php echo $couleur_cellule[$type_couleur]; ?>;">
